--- a/src/Components/layouts/MainNavigation.module.css
+++ b/src/Components/layouts/MainNavigation.module.css
@@ -1,6 +1,6 @@
 .header{
     width: 100%;
-    background-color: black;
+    background-color: #CCD1D1;
     color: white;
     display:flex;
     align-items: center;
@@ -8,7 +8,7 @@
     justify-content: space-between;
     position: fixed;
     top: 0;
-    height: 3rem;
+    height: 4rem;
     z-index: 1;
 }
 
@@ -16,19 +16,19 @@
     display: flex;
     position: relative;
     top: 0.5rem;
-    left: 14rem;
+    left: 8rem;
     
 }
 
 .header li{
-    margin-left: 2rem;
+    margin-left: 3rem;
     list-style: none;
 }
 
 
 .title1{
     font-size: 25px;
-    font-family: cursive;
+    color: #FF5733;
 }
 
 .title2{
@@ -41,7 +41,7 @@
 
 .header a{
     text-decoration: none;
-    color: rgb(99, 220, 250);
+    color: #707B7C ;
 }
 
 .header a.active{
@@ -56,8 +56,15 @@
     width: 7rem;
     height: 2rem;
     border-radius: 6px;
-    background-color: rgb(211, 21, 62);
+    background-color: #FF5733;
     color: white;
+    border: none;
+}
+
+.icon{
+    position: relative;
+    top: -0.1rem;
+    color: #FF5733;
 }
 
 /* .header{
