--- a/src/backgrounds/LoginBackground.module.css
+++ b/src/backgrounds/LoginBackground.module.css
@@ -9,7 +9,7 @@
     background-size: cover;
 }
 
-.back2{
+/* .back2{
     position: fixed;
     background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZXLrQ4OW7-bitD-sz8k01x6KIKFQTTmIWyw&usqp=CAU');
     width: 100%;
@@ -18,4 +18,4 @@
     left: 0;
     background-repeat: no-repeat;
     background-size: cover;
-}
+} */
