creating tourist login and displaying tour guides

--- a/src/pages/LoginAccessories/TourGuideReg.module.css
+++ b/src/pages/LoginAccessories/TourGuideReg.module.css
@@ -29,9 +29,19 @@
     margin-left: 0rem;
 }
 
+.fill20{
+    width: 100%;
+    margin-left: 0rem;
+}
+
 .fill3{
-    width: 60%;
+    width: 90%;
     margin-left: 3rem;
+}
+
+.fill30{
+    width: 100%;
+    margin-left: 0rem;
 }
 
 .fill4{
