--- a/src/pages/LoginAccessories/LoginForm.module.css
+++ b/src/pages/LoginAccessories/LoginForm.module.css
@@ -1,5 +1,6 @@
 .card{
     width: 20rem;
+    height:28rem;
     margin: 5rem auto;
     margin-bottom: 0;
     border-radius: 6px;
@@ -7,14 +8,28 @@
     top: 1rem;
 }
 
+.logo img{
+    width: 5rem;
+    position: relative;
+    left: 6.3rem;
+    top: -0.5rem;
+}
+
 .heading{
     text-align: center;
-    margin-bottom: 2rem;
+    margin-bottom: 0;
+    position: relative;
+    top: -1.4rem;
 }
 
 .form{
     width: 18rem;
     margin: 0 auto;
+}
+
+.credentials{
+    position: relative;
+    top: -0.8rem;
 }
 
 .fill{
@@ -25,6 +40,12 @@
 .buttons{
     position: relative;
     left: 1.5rem;
+    top: 1rem;
+}
+
+.loginBtn{
+    position: relative;
+    top: -1rem;
 }
 
 .login{
@@ -40,15 +61,17 @@
 .signIn_Btn{
     text-align: left;
     margin: 0 0 1rem 1rem;
+    position: relative;
+    top: -1rem;
 }
 
 .regBtn {
     background-color: #03122E;
     padding: 5px;
-    border-radius: 6px;
+    border-radius: 5px;
     border: none;
     width: 13rem;
-    margin: 0.5rem;
+    margin: 0 0 0.5rem 0;
     
 
 }
@@ -58,4 +81,9 @@
     text-decoration: none;
     font-family: inherit;
     
+}
+
+.actions{
+    position: relative;
+    top: -1rem;
 }
