--- a/src/backgrounds/RegisterBg.module.css
+++ b/src/backgrounds/RegisterBg.module.css
@@ -1,6 +1,6 @@
 .back{
     position: fixed;
-    background-image: url('https://c4.wallpaperflare.com/wallpaper/22/67/641/sri-lanka-nature-rock-trees-wallpaper-preview.jpg');
+    background-image: url('https://img.freepik.com/free-vector/blue-background-with-product-podium-surrounded-by-blue-clouds_87521-3062.jpg?w=2000');
     width: 100%;
     min-height: 100vh;
     top: 0;
