--- a/src/Components/layouts/Layout.module.css
+++ b/src/Components/layouts/Layout.module.css
@@ -3,6 +3,7 @@
 }
 
 .main{
-    margin:4rem 0 1.5rem 0;
-    min-height: 78.1vh;
+    margin:4rem 0 0rem 0;
+    min-height: 81.8vh;
+    /* min-height: 81.8vh; */
 }
