--- a/src/Components/layouts/MainNavigation.module.css
+++ b/src/Components/layouts/MainNavigation.module.css
@@ -1,13 +1,13 @@
 .header{
     width: 100%;
     /* background-color: #CCD1D1; */
-    background-color: transparent;
+    background-color: rgb(0,0,0,0.55);
     color: white;
     display:flex;
     align-items: center;
     padding: 0px 1.5rem 0px 0.1rem;
     justify-content: space-between;
-    position: fixed;
+    position: absolute;
     top: 0;
     height: 4rem;
     z-index: 1;
@@ -22,7 +22,7 @@
     display: flex;
     position: relative;
     top: 0.5rem;
-    left: 5.5rem;
+    left: 0rem;
     
 }
 
@@ -36,13 +36,13 @@
     font-size: 25px;
     color: #FF5733;
     position: relative;
-    left: -8rem;
+    left: 2rem;
     top: 0.2rem;
 }
 
 .header a{
     text-decoration: none;
-    color: #707B7C ;
+    color: white ;
 }
 
 .header a.active{
@@ -50,7 +50,7 @@
 }
 
 .header a:hover{
-    color: brown;
+    color: orange;
 }
 
 .signOut{
@@ -71,6 +71,26 @@
 .icon1{
     position: relative;
     top: 0rem;
-   
     color: #FF5733;
 }
+
+.dropContainer{
+    background-color: rgb(0,0,0,0.25) !important;
+    color: orange;
+    width: 10rem;
+    border: none;
+}
+
+.dropMenu{
+    width: 20% !important;
+    background-color: rgb(0,0,0,0.5) !important;
+}
+
+.drop a{
+    color: white !important;
+}
+
+.drop a:hover{
+    color: orangered !important;
+}
+
