--- a/src/backgrounds/HomepageBg.module.css
+++ b/src/backgrounds/HomepageBg.module.css
@@ -2,8 +2,8 @@
     position: relative;
     background-image: url('https://cdn1.tripoto.com/media/filter/tst/img/1524784/Image/1572863801_sri_lanka_2.jpg');
     width: 100%;
-    height: 30rem;
-    top: 0;
+    height: 33rem;
+    top: -4rem;
     left: 0;
     background-repeat: no-repeat;
     background-size: cover;
