--- a/src/pages/LoginAccessories/LoginForm.module.css
+++ b/src/pages/LoginAccessories/LoginForm.module.css
@@ -6,6 +6,10 @@
     border-radius: 6px;
     position: relative;
     top: 1rem;
+    /* left: -25rem; */
+    border: none !important;
+    background-color: rgb(0,0,0,0.35) !important;    
+    padding: 1rem 0 0 0;
 }
 
 .logo img{
@@ -19,7 +23,7 @@
     text-align: center;
     margin-bottom: 0;
     position: relative;
-    top: -1.4rem;
+    /* top: -1.4rem; */
 }
 
 .form{
@@ -29,7 +33,7 @@
 
 .credentials{
     position: relative;
-    top: -0.8rem;
+    top: 2rem;
 }
 
 .fill{
@@ -40,12 +44,12 @@
 .buttons{
     position: relative;
     left: 1.5rem;
-    top: 1rem;
+    top: 2rem;
 }
 
 .loginBtn{
     position: relative;
-    top: -1rem;
+    top: 2rem;
 }
 
 .login{
@@ -62,16 +66,18 @@
     text-align: left;
     margin: 0 0 1rem 1rem;
     position: relative;
-    top: -1rem;
+    top: 1.5rem;
+    color: white;
 }
 
 .regBtn {
-    background-color: #03122E;
+    background-color: #347474 !important;
     padding: 5px;
     border-radius: 5px;
     border: none;
     width: 13rem;
     margin: 0 0 0.5rem 0;
+    color: black;
     
 
 }
@@ -83,7 +89,14 @@
     
 }
 
+.regBtn a:hover{
+    color: black;
+    text-decoration: none;
+    font-family: inherit;
+    
+}
+
 .actions{
     position: relative;
-    top: -1rem;
+    top: 2rem;
 }
