--- a/src/pages/TourGuide.module.css
+++ b/src/pages/TourGuide.module.css
@@ -2,7 +2,7 @@
 .card{
     width: 30rem;
     height: 12rem;
-    margin: 1rem auto;
+    margin: 0rem auto;
     padding: 1rem;
 }
 
@@ -17,6 +17,7 @@
     background-color: #1bb91b !important;
     border: none !important;
     color: white !important;
+    font-family: inherit !important;
     
 }
 
@@ -36,7 +37,7 @@
     width: 100%;
     object-fit: cover;
     border-radius: 6px 6px 0 0;
-    min-height: 34.5rem;
+    min-height: 37rem;
    
 }
 
@@ -55,16 +56,18 @@
 }
 
 .actions button{
-    padding: 0.3rem;
+    padding: 0.5rem;
     border-radius: 7px;
-    background-color: rgb(182, 39, 58);
+    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+    color: white !important;
     cursor: pointer;
-    color: black;
-    font-family: cursive
+    color: black !important;
+    font-family: inherit !important;
+    border: 1px solid;
 }
 
 .actions button:hover,
 .actions button:active{
-    background-color: rgb(92, 40, 47);
+    background: radial-gradient(circle, rgba(148,187,233,1) 0%, rgba(18,205,236,1) 100%);
     color: white;
 }
