--- a/src/Components/layouts/MainNavigation.module.css
+++ b/src/Components/layouts/MainNavigation.module.css
@@ -78,7 +78,7 @@
     background-color: rgb(0,0,0,0.25) !important;
     color: orange;
     width: 10rem;
-    border: none;
+    border: none !important;
 }
 
 .dropMenu{
