--- a/src/Components/PageComponents/TourGuideComponents/BookGuide.module.css
+++ b/src/Components/PageComponents/TourGuideComponents/BookGuide.module.css
@@ -1,12 +1,14 @@
 .bookingContainer{
     border: 1px solid lightgray;
-    border-radius: 6px;
+    border-radius: 16px 0px;
     position: relative;
+    text-align: center;
 }
 
 .title{
     font-size: 18px;
-    background-color: lawngreen;
+    background-color: #FF5733;
+    border-radius: 16px 0px 0px 0px;
     color: white;
     font-weight: bold;
     padding: 8px 5px;
@@ -17,12 +19,89 @@
     flex-direction: column;
     gap: 20px;
     margin: 20px 15px;
-    margin-top: 2rem;
+    margin-top: 1.5rem;
 }
 
-.bookingInputs>input{
+.travelContainer{
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+    font-weight: bold;
+}
+
+.travelContainer>input{
     padding: 6px;
     border-radius: 6px;
     border: 1px solid darkblue;
 }
 
+.dateContainer{
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+}
+
+.dateContainer>label{
+    margin-left: 5px;
+    font-weight: bold;
+}
+
+.searchIcon{
+    color: blue;
+    
+}
+
+.bookingDate{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-left: 0px;
+    border: 1px solid darkblue;
+    padding: 5px 5px 5px 57px;
+    border-radius: 6px;
+    
+}
+
+.date{
+    position: absolute;
+    top: 19.7rem;
+    z-index: 2;
+    left: 18px;
+    border: 1px solid lightgray;
+    border-radius: 6px;
+}
+
+.timeContainer{
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+    margin: 0.7rem 0 10px 5px;
+    font-weight: bold;
+    
+}
+
+.timeContainer>input{
+    width: 100%;
+    padding: 5px 5px 5px 10px;
+    border-radius: 6px;
+    border: 1px solid darkblue;
+}
+
+.searchDate{
+    cursor: pointer;
+}
+
+.buttonContainer{
+    text-align: right;
+    margin-top: 0.7rem;
+}
+
+.buttonContainer>Button{
+    background-color: rgb(7, 164, 25) !important;
+    border: none !important;
+}
+
+.buttonContainer>Button:hover{
+    background-color: rgb(11, 95, 11) !important;
+    border: none !important;
+}
