--- a/src/Components/PageComponents/TourGuideComponents/SelectedGuide.module.css
+++ b/src/Components/PageComponents/TourGuideComponents/SelectedGuide.module.css
@@ -25,11 +25,13 @@
 
 .guideDetails{
     border: 1px solid lightgray;
-    padding: 50px;
+    padding: 30px;
     border-radius: 6px;
     display: flex;
     /* justify-content: space-between; */
     flex-direction: column;
+    flex: 2;
+    height: max-content;
 }
 
 .mainDetails{
@@ -37,8 +39,6 @@
     gap: 30px;
     margin-bottom: 20px;
     width: 100%;
-    flex: 2.2;
-
 }
 
 .guideDescription{
@@ -123,10 +123,10 @@
 }
 
 .guideBooking{
-    flex: 1;
+    flex: 1.2;
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 30px;
 }
 
 .descriptionForm{
@@ -144,6 +144,12 @@
     font-style: italic;
 }
 
+.rateFormula{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
 .rateFormula>h6{
     font-size: 15px;
 }
@@ -152,7 +158,7 @@
     text-align: center;
     display: flex;
     flex-direction: column;
-    font-size: 12px;
+    font-size: 14px;
     font-weight:bold ;
     border: 1px solid lightcoral;
     padding: 15px 0px;
