--- a/src/Components/layouts/MainNavigation.module.css
+++ b/src/Components/layouts/MainNavigation.module.css
@@ -75,7 +75,7 @@
 }
 
 .dropContainer{
-    background-color: rgb(0,0,0,0.25) !important;
+    background-color: transparent !important;
     color: orange;
     width: 10rem;
     border: none !important;
