--- a/src/Components/PageComponents/ProfileComponents/ProfileDetails.module.css
+++ b/src/Components/PageComponents/ProfileComponents/ProfileDetails.module.css
@@ -7,14 +7,13 @@
     padding: 1rem;
     position: relative;
     top: -4rem;
-    height: 31rem;
 }
 
 .profileDetails{
     display: flex;
     flex-direction: column;
     gap: 15px;
-    height: max-content;
+    /* height: max-content; */
 }
 
 .head{
@@ -78,16 +77,20 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
-    position: absolute;
-    top: 9rem;
+    position: relative;
+    top: -7rem;
     left: -1.5rem;
+    height:max-content
 }
 
 .btn{
     width: 150px;
-    position: absolute;
+    position: relative;
+    top: -5rem;
+    left: 55rem;
+    /* position: absolute;
     top: 31.5rem;
-    left: 20rem;
+    left: 20rem; */
 }
 
 .pencilIcon{
