--- a/src/Components/PageComponents/TourGuideComponents/SelectedGuide.module.css
+++ b/src/Components/PageComponents/TourGuideComponents/SelectedGuide.module.css
@@ -15,12 +15,29 @@
     margin: 1rem auto;
 }
 
+.guideWrappers{
+    width: 60%;
+    max-width: 1024px;
+    display: flex;
+    gap: 20px;
+    margin: 1rem auto;
+}
+
 .guideImage{
     height: 250px;
     width: 300px;
-    margin-right: 20px;
+    margin-right: 50px;
     border-radius: 50%;
     flex: 1.9;
+    border: 3px solid lightslategray;
+}
+
+.guideImages{
+    height: 270px;
+    width: 300px;
+    margin-right: 70px;
+    border-radius: 50%;
+    flex: 1.5;
     border: 3px solid lightslategray;
 }
 
@@ -40,6 +57,14 @@
     gap: 30px;
     margin-bottom: 20px;
     width: 100%;
+}
+
+.mainDetail{
+    display: flex;
+    gap: 30px;
+    margin-bottom: 20px;
+    width: 100%;
+    padding: 10px 20px;
 }
 
 .guideDescription{
@@ -122,7 +147,14 @@
 .guideAbout{
     display: flex;
     flex-direction: column;
+    margin-top: 1rem;   
+}
+
+.guideAbouts{
+    display: flex;
+    flex-direction: column;
     margin-top: 1rem;
+    padding: 0 5rem;
 }
 
 .about{
