--- a/src/Components/PageComponents/Homepage/HomeHeader.css
+++ b/src/Components/PageComponents/Homepage/HomeHeader.css
@@ -18,7 +18,7 @@
     color: blue;
 }
 
-.searchContainer{
+.searchContainer {
     height: 30px;
     background-color: white;
     border: 3px solid #febb02;
@@ -27,11 +27,12 @@
     justify-content: space-between;
     padding: 30px 20px;
     border-radius: 6px;
-    position: relative;
+    position: absolute;
     width: 100%;
     max-width: 1024px;
-    top: -5.5rem;
-    left: 10rem;
+    bottom: -2rem;
+    left: 50%;
+    transform: translateX(-50%);
     z-index: 2;
 }
 
@@ -60,3 +61,14 @@
     cursor: pointer;
 }
 
+.homeBg{
+    position: relative;
+    background-image: url('https://cdn1.tripoto.com/media/filter/tst/img/1524784/Image/1572863801_sri_lanka_2.jpg');
+    width: 100%;
+    height: 33rem;
+    top: -4rem;
+    left: 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin:0;
+}
