--- a/src/pages/LoginAccessories/TourGuideReg.module.css
+++ b/src/pages/LoginAccessories/TourGuideReg.module.css
@@ -3,11 +3,24 @@
     margin: 4rem auto;
     margin-top: 3rem;
     padding: 1.5rem;
+
 }
 
 .heading{
     text-align: center;
     margin-bottom: 1rem;
+}
+
+.tGuideBg{
+    position: fixed;
+    background-image: url('https://img.freepik.com/free-vector/blue-background-with-product-podium-surrounded-by-blue-clouds_87521-3062.jpg?w=2000');
+    width: 100%;
+    height: 100% !important;
+    /* min-height: 100vh; */
+    top: 0;
+    left: 0;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .form{
