--- a/src/Components/PageComponents/TourGuideComponents/List.css
+++ b/src/Components/PageComponents/TourGuideComponents/List.css
@@ -1,3 +1,17 @@
+.guideBackground{
+    position: relative;
+    background-color: white;
+    /* background-image: url('https://media.istockphoto.com/vectors/dark-red-abstract-blurry-background-vector-id1268618849?k=20&m=1268618849&s=612x612&w=0&h=fUp16V3qFmywZzIK6WL9TAXuuXF1TbGIaiYx82R1HPg='); */
+    width: 100%;
+    height: 100%;
+    top: -6.5rem;
+    left: 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin:0;
+    padding-top: 3rem;
+}
+
 .listContainer{
     display: flex;
     justify-content: center;
