--- a/src/Components/PageComponents/BookingComponents/SelectedBooker.module.css
+++ b/src/Components/PageComponents/BookingComponents/SelectedBooker.module.css
@@ -1,3 +1,7 @@
+.bookerImage{
+    width: 100%;
+}
+
 .bookerContainer{
     width: 50%;
     max-width: 1024px;
@@ -6,7 +10,7 @@
     border: 1px solid lightgray;
     padding: 1rem;
     position: relative;
-    top: -4rem;
+    top: 0rem;
     height: 31rem;
 }
 
@@ -18,12 +22,12 @@
 }
 
 .bookerWrapper img{
-    width: 300px;
-    height: 300px;
+    width: 260px;
+    height: 260px;
     border-radius: 50%;
     margin: 1rem auto;
     position: relative;
-    top: -10rem;
+    top: -11rem;
     border: 8px solid white;
 }
 
