--- a/src/Components/layouts/MainNavigation.module.css
+++ b/src/Components/layouts/MainNavigation.module.css
@@ -1,16 +1,18 @@
 .header{
     width: 100%;
     /* background-color: #CCD1D1; */
-    background-color: rgb(0,0,0,0.55);
-    color: white;
+    background-color: white;
+    color: black;
     display:flex;
     align-items: center;
     padding: 0px 1.5rem 0px 0.1rem;
     justify-content: space-between;
-    position: absolute;
+    position: fixed;
     top: 0;
     height: 4rem;
-    z-index: 1;
+    z-index: 2;
+    font-family: 'Raleway'!important;
+    font-weight: bold !important;
 }
 
 .logo img{
@@ -23,7 +25,6 @@
     position: relative;
     top: 0.5rem;
     left: 0rem;
-    
 }
 
 .header li{
@@ -32,17 +33,25 @@
 }
 
 
-.title1{
+.title{
     font-size: 25px;
-    color: #FF5733;
+    color: black;
     position: relative;
     left: 2rem;
     top: 0.2rem;
+    font-weight: 900;
+}
+
+.titleSub{
+    color: #FF5733;
 }
 
 .header a{
     text-decoration: none;
-    color: white ;
+    color: black ;
+    font-family: 'Raleway';
+    font-weight: bold;
+
 }
 
 .header a.active{
@@ -50,7 +59,9 @@
 }
 
 .header a:hover{
-    color: orange;
+    color: rgb(0, 0,0,0.50);
+    transition: all 0.38s ease;
+    transform: translateX(10px);
 }
 
 .signOut{
@@ -75,8 +86,8 @@
 }
 
 .dropContainer{
-    background-color: transparent !important;
-    color: orange;
+    background-color: white !important;
+    color: black !important;
     width: 10rem;
     border: none !important;
 }
