--- a/src/Components/PageComponents/Homepage/HomeContents.module.css
+++ b/src/Components/PageComponents/Homepage/HomeContents.module.css
@@ -1,6 +1,7 @@
 .contentsContainer{
     margin: 0 3rem ;
     text-align: center;
+    font-family: 'Raleway';
 }
 
 .introContainer{
@@ -22,7 +23,53 @@
     font-weight: 500;
 }
 
-.options{
+.optionsContainer{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, auto));
+    align-items: center;
+    justify-content: center;
+    gap: 2.3rem;
+    margin: 5rem auto;
+    box-shadow:-3px 3px 150px 80px #ccc;
+    width: 70%;
+    border-radius: 10px;
+}
+
+.imageContainer img{
+    width: 100%;
+    height: 80px;
+    border-radius: 10px 0 0  10px;
+}
+
+.tiles{
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    gap: 1.4rem;
+    border-radius: 10px;
+    height: 80px;
+    background: rgb(0, 0, 0);
+    box-shadow:-3px 3px 15px 23px #ccc;
+    transition: all .38s ease;
+    grid-template-rows: 80px;
+    grid-template-columns: 90px 150px;
+}
+
+.textContainer{
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.tiles:hover{
+    transform: translateX(12px);
+    cursor: pointer;
+}
+
+.optionsContainer a{
+    text-decoration: none;
+}
+
+/* .options{
     width: 75%;
     margin: 3rem auto;
     margin-top: 7rem;
@@ -35,7 +82,6 @@
     font-family: 'Raleway';
     font-weight: 900;
     font-size: 27px;
-    /* border: 1px solid black; */
     box-shadow:-3px 3px 100px 6px #ccc; 
     background: transparent;
 }
@@ -110,5 +156,5 @@
 .options a{
     text-decoration: none;
     color: black;
-}
+} */
 
