--- a/src/Components/PageComponents/TourGuideComponents/List.css
+++ b/src/Components/PageComponents/TourGuideComponents/List.css
@@ -4,7 +4,7 @@
     /* background-image: url('https://media.istockphoto.com/vectors/dark-red-abstract-blurry-background-vector-id1268618849?k=20&m=1268618849&s=612x612&w=0&h=fUp16V3qFmywZzIK6WL9TAXuuXF1TbGIaiYx82R1HPg='); */
     width: 100%;
     height: 100%;
-    top: -6.5rem;
+    top: -3rem;
     left: 0;
     background-repeat: no-repeat;
     background-size: cover;
@@ -31,8 +31,9 @@
     padding: 10px 20px;
     border-radius: 6px;
     position: sticky;
-    top: 80px;
+    top: 130px;
     height: max-content;
+    margin-right: 3rem;
 }
 
 .searchTitle{
@@ -54,25 +55,25 @@
     width: 100%;
 }
 
-.searchItem>label{
-    font-size: 18px;
+.searchItem>label {
+    font-size: 18px!important;
 }
 
 .searchItem>input{
-    height: 30px;
-    border: none;
-    padding:5px 10px;
-    width: 100%;
+    height: 30px!important;
+    border: none!important;
+    padding:5px 10px!important;
+    width: 100%!important;
 }
 
 .searchItem>span{
     height: 35px;
-    border: none;
+    border: none!important;
     background-color: white;
     padding:5px 10px;
     align-items: center;
     cursor: pointer;
-    width: 100%;
+    width: 100%!important;
 }
 
 .listResult{
