--- a/src/Components/layouts/MainNavigation.module.css
+++ b/src/Components/layouts/MainNavigation.module.css
@@ -5,7 +5,7 @@
     color: black;
     display:flex;
     align-items: center;
-    padding: 0px 1.5rem 0px 0.1rem;
+    padding: 0px 3.5rem 0px 0.1rem;
     justify-content: space-between;
     position: fixed;
     top: 0;
@@ -30,6 +30,7 @@
 .header li{
     margin-left: 1.8rem;
     list-style: none;
+    position: relative;
 }
 
 
@@ -51,6 +52,7 @@
     color: black ;
     font-family: 'Raleway';
     font-weight: bold;
+    font-size: 14px;
 
 }
 
@@ -59,7 +61,7 @@
 }
 
 .header a:hover{
-    color: rgb(0, 0,0,0.50);
+    color: #FF5733;
     transition: all 0.38s ease;
     transform: translateX(10px);
 }
@@ -73,19 +75,46 @@
     border: none;
 }
 
-.icon{
+/* .icon{
     position: relative;
     top: -0.1rem;
     color: #FF5733;
-}
+} */
 
-.icon1{
-    position: relative;
-    top: 0rem;
+.iconRight{
+    margin-left: 5px;
     color: #FF5733;
+    width: 10px;
 }
 
-.dropContainer{
+.dropDown{
+    display: none;
+}
+
+.header ul li:hover .dropDown{
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 100%;
+    background-color: white;
+    width: 105px;
+}
+
+.header ul li:hover .dropDown ul{
+    display: block;
+    margin: 10px;
+    position: relative;
+}
+
+.header ul li:hover .dropDown ul li{
+    width: 100px;
+    padding: 10px 0;
+   position: relative;
+   left: -60px;
+   color: black;
+}
+
+/* .dropContainer{
     background-color: white !important;
     color: black !important;
     width: 10rem;
@@ -104,4 +133,4 @@
 .drop a:hover{
     color: orangered !important;
 }
-
+ */
