--- a/src/Components/PageComponents/AboutComponents/AboutContents.module.css
+++ b/src/Components/PageComponents/AboutComponents/AboutContents.module.css
@@ -1,11 +1,11 @@
-.thingsToDoContainer{
+.aboutContainer{
     width: 100%;
     font-family: 'Raleway';
 }
 
 .topContainer{
     width: 100%;
-    background-image: url('https://travellemming.com/wp-content/uploads/Galle-Fort-Sri-Lanka.jpg');
+    background-image: url('https://blog.bhlankatours.com/wp-content/uploads/2022/04/Cycling-in-Ella.jpg');
     background-size: 100% 17rem;
     background-repeat: no-repeat;
     height: 17rem;
@@ -14,66 +14,28 @@
 
 .topContainer span{
     position: absolute;
-    left: 20rem;
+    left: 10rem;
     top: 13rem;
     color: white;
     font-size: 60px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.thingsToDoIntroContainer{
-    display: grid;
-    grid-template-rows: repeat(auto-fit, minmax(20px, auto));
-    align-items: center;
-    justify-content: center;
-    grid-gap: 1.5rem;
-    margin: 5rem auto;
-    width: 85%;
-    border-radius: 10px;
-}
-
-.introHead{
-    font-family: 'Oswald',sans-serif;
-    font-size: 30px;
-    border-bottom: 3px solid green;
-    width: 42%;
-    /* text-decoration: underline;
-    text-decoration-color: green; */
-}
-
-.introParagraph{
-    font-family: 'Roboto Condensed';
-    font-size: 18px;
-}
-
-.mapouter{
-    position: relative;
-    text-align: center;
-    height: 475px;
-    width: 1040px;
-    margin: 4rem auto;
-    border: 1px solid grey;
-    padding: 18px;
-}
-
-.gmap_canvas{
-    overflow: hidden;
-    background: none !important;
-    height: 435px;
-    width: 1000px;
-
-}
-
-.toDoActivitiesContainer{
+.aboutMeContainer{
     display: grid;
     width: 75%;
-    margin: 2rem auto;
+    margin: 5rem auto;
     /* align-items: center; */
     /* grid-gap: 1rem; */
     grid-template-rows: minmax(100px auto);
     grid-template-columns: 500px 500px;
     grid-template-areas: 'header header'
     "sidebar content";
+}
+
+.aboutContainer hr{
+    width: 80%;
+    margin: 1rem auto;
 }
 
 .activityHeader{
@@ -87,10 +49,11 @@
 }
 
 .activityImage img{
-    width: 500px;
+    width: 80%;
     grid-area: sidebar;
     padding: 10px;
     border: 1px solid lightgray;
+    height: 25rem;
 
 }
 
@@ -99,4 +62,46 @@
     padding: 10px 15px 10px 50px;
     font-family: "Roboto Condensed";
     font-size: 16px;
+}
+
+.paragraph2{
+    margin-top: 1rem;
+}
+
+.subParagraph{
+    display: grid;
+    grid-template-columns: 45% 45%;
+    width: 75%;
+    margin: 2rem auto;
+    gap: 6rem;
+}
+
+
+.sub{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.sub h4{
+    font-weight: bold;
+}
+
+.sub span{
+    font-size: 15px;
+}
+
+.bottomContainer{
+    display: grid;
+    grid-template-columns: 45% 45%;
+    gap: 5rem;
+    margin: 2rem auto;
+    width: 75%;
+    height: max-content;
+}
+
+.faq{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
