--- a/src/Components/PageComponents/ThingsToDoComponents/AddThingsToDo.module.css
+++ b/src/Components/PageComponents/ThingsToDoComponents/AddThingsToDo.module.css
@@ -6,7 +6,8 @@
 
 .addThingsToDo{
     border: 1px solid gray;
-    padding: 10px;
+    padding: 10px 40px;
+    border-radius: 8px;
 }
 .addThingsToDo h3{
     text-align: center;
@@ -21,12 +22,15 @@
 
 .add input{
     margin: 10px 0;
+    border-radius: 6px;
+    border: 1px solid gray;
 }
 
 .add textarea{
     columns: 40;
     height: 10rem;
     font-size: 14px;
+    border-radius: 8px;
 }
 
 .actionsContainer{
