--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,22 @@
     --location: #EF5757;
   --shedule: #E1AE4A;
   }
+
+  /* .button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    border: none;
+    border-radius: 0.5rem;
+    background: var(--buttonBg);
+    transition: all 100ms ease-out;
+    padding: 5px 10px;
+  }
+  
+  .button:hover{
+    cursor: pointer;
+    color: var(--orange);
+    background: transparent;
+    border: 2px solid var(--orange);
+  } */
