--- a/src/Components/PageComponents/Homepage/HomeContents.module.css
+++ b/src/Components/PageComponents/Homepage/HomeContents.module.css
@@ -67,7 +67,7 @@
     gap: 1.4rem;
     border-radius: 10px;
     height: 80px;
-    background: rgb(0, 0, 0);
+    background: rgb(0, 0, 0, 0.30);
     box-shadow:-3px 3px 15px 23px #ccc;
     transition: all .38s ease;
     grid-template-rows: 80px;
@@ -78,6 +78,7 @@
 .textContainer{
     font-size: 20px;
     font-weight: 600;
+    color: black;
 }
 
 .tiles:hover{
