--- a/src/Components/PageComponents/TourGuideComponents/SelectedGuide.module.css
+++ b/src/Components/PageComponents/TourGuideComponents/SelectedGuide.module.css
@@ -2,54 +2,55 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-top: 100px;
-    padding: 5px 20px;
-    
+    align-items:center ;
+    padding: 30px 20px;
+    gap: 2rem;
+    background-image: url('https://media.istockphoto.com/vectors/blue-dots-vector-background-vector-id1148345171?k=20&m=1148345171&s=612x612&w=0&h=nYRw27gBbDaBLiMVeRVF7MytXUO9UfKCsczkAvGdIDw=');
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: black;
 }
 
 .guideWrapper{
     width: 100%;
-    max-width: 1024px;
+    /* max-width: 1024px; */
     display: flex;
-    gap: 20px;
+    gap: 12rem;
     margin: 1rem auto;
-}
-
-.guideWrappers{
-    width: 60%;
-    max-width: 1024px;
-    display: flex;
-    gap: 20px;
-    margin: 1rem auto;
+    flex: 1;
+    justify-content: center;
 }
 
 .guideImage{
     height: 250px;
-    width: 300px;
+    width: 250px;
     margin-right: 50px;
     border-radius: 50%;
-    flex: 1.9;
     border: 3px solid lightslategray;
 }
 
-.guideImages{
+/* .guideImages{
     height: 270px;
     width: 300px;
     margin-right: 70px;
     border-radius: 50%;
     flex: 1.5;
     border: 3px solid lightslategray;
-}
+} */
 
 .guideDetails{
-    border: 1px solid lightgray;
+    
     padding: 30px;
-    border-radius: 6px;
+    border-radius: 1rem;
     display: flex;
-    /* justify-content: space-between; */
+    justify-content: center;
     flex-direction: column;
-    flex: 2;
+    /* flex: 2; */
     height: max-content;
+    box-shadow: 3px 3px 5px 6px #ccc;
+    width: 50%;
+    margin-left: 3rem;
+    background: var(--cardColor);
 }
 
 .mainDetails{
@@ -57,14 +58,6 @@
     gap: 30px;
     margin-bottom: 20px;
     width: 100%;
-}
-
-.mainDetail{
-    display: flex;
-    gap: 30px;
-    margin-bottom: 20px;
-    width: 100%;
-    padding: 10px 20px;
 }
 
 .guideDescription{
@@ -148,13 +141,7 @@
     display: flex;
     flex-direction: column;
     margin-top: 1rem;   
-}
-
-.guideAbouts{
-    display: flex;
-    flex-direction: column;
-    margin-top: 1rem;
-    padding: 0 5rem;
+    padding: 0 3rem;
 }
 
 .about{
@@ -168,19 +155,20 @@
 }
 
 .guideBooking{
-    flex: 1.2;
+    flex: 1;
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 2rem;
 }
 
 .descriptionForm{
-    border: 1px solid lightgreen;
+    box-shadow: 3px 3px 5px 6px #ccc;
     border-radius: 8px;
     padding: 10px;
     display: flex;
     flex-direction: column;
     gap: 25px;
+    background: var(--cardColor);
 }
 
 .descriptionForm>p{
