--- a/src/Components/layouts/SubNavigation.module.css
+++ b/src/Components/layouts/SubNavigation.module.css
@@ -11,7 +11,8 @@
     font-family: 'Raleway';
     font-weight: 600;
     height: 2rem;
-    z-index: 2;
+    z-index: 1;
+    padding-top: 12px;
 }
 
 .header ul{
