--- a/src/Components/PageComponents/BookingComponents/BookingList.module.css
+++ b/src/Components/PageComponents/BookingComponents/BookingList.module.css
@@ -1,17 +1,60 @@
-.bookings{
+
+
+.tours>h1{
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+.btnContainer{
     display: flex;
-    flex-direction: column;
-    position: relative;
-    top: 1.5rem;
+    gap: 10px;
+}
+
+.tourDelete{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    border: none;
+    border-radius: 0.5rem;
+    background: rgb(199, 4, 4);
+    transition: all 100ms ease-out;
+    padding: 5px 10px;
+}
+
+.tourDelete:hover{
+    cursor: pointer;
+    color: white;
+    background: transparent;
+    border: 2px solid rgb(199, 4, 4);
+}
+
+.tourFinish{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: black;
+    border: none;
+    border-radius: 0.5rem;
+    background: rgb(147, 240, 7);
+    transition: all 100ms ease-out;
+    padding: 5px 10px;
+}
+
+.tourFinish:hover{
+    cursor: pointer;
+    color: white;
+    background: transparent;
+    border: 2px solid rgb(147, 240, 7);
 }
 
 .bookingComponents{
-    width: 70%;
-    padding: 1rem;
-    display: flex;
-    justify-content: space-between;
-    margin: 2rem auto;
+    width: 100%;
+    display: grid;
+    grid-template-rows: auto auto;
+    grid-gap: 2rem;
     background-color: var(--cardColor);
+    padding: 1rem;
 }
 
 .bookingImage{
@@ -20,30 +63,35 @@
 }
 
 .bookingContainer{
-    width: 100%;
-    /* max-width: 1024px; */
-    /* margin: 0rem auto; */
-    padding: 0 6.5rem;
+    width: 60%;
+    padding: 0 1rem;
+    margin: 0rem auto;
     margin-bottom: 2.5rem;
-    flex: 2.3;
     height: max-content;
-    
+    justify-content: center;
+    align-items: center;   
+}
+
+.bookingContainer>h1{
+    text-align: center;
+    margin-bottom: 2rem;
 }
 
 .bookingList{
     display: flex;
     padding: 15px;
-    gap: 30px;
+    gap: 0px;
     border: 1px solid rgb(0,0,0,0.40);
     margin-bottom: 25px;
     box-shadow:3px 3px 4px 1px #ccc;
     border-radius: 1rem;
+    align-items: center;
 }
 
 .bookingList>img{
     width: 230px;
-    height: 250px;
-    margin-right: 3rem;
+    height: 230px;
+    margin-right: 2rem;
 }
 
 .bookingDetails{
@@ -53,15 +101,25 @@
     margin-bottom: 1rem;
 }
 
+.details{
+    display: grid;
+    grid-template-columns: 10rem auto;
+    grid-gap: 1rem;
+}
+
+.details>span:nth-of-type(1){
+    font-weight: bold;
+}
+
 .detailsContainer{
     display: flex;
     flex-direction: column;
-    gap: 20px;
 }
 
 .buttonContainer{
     display: flex;
     gap: 10px;
+    margin-top: 1rem;
 }
 
 .mainBtn {
@@ -72,16 +130,16 @@
     color: white;
     border: none;
     border-radius: 0.5rem;
-    background: var(--buttonBg);
+    background: rgb(116, 194, 0);
     transition: all 100ms ease-out;
     padding: 5px 10px;
 }
 
 .mainBtn:hover{
     cursor: pointer;
-    color: var(--orange);
+    color: black;
     background: transparent;
-    border: 2px solid var(--orange);
+    border: 2px solid rgb(116, 194, 0);
 }
 
 .cancelBtn {
@@ -92,15 +150,15 @@
     color: white;
     border: none;
     border-radius: 0.5rem;
-    background-color: red;
+    background-color: rgb(199, 4, 4);
     transition: all 100ms ease-out;
     padding: 5px 10px;
 }
 
 .cancelBtn:hover{
     cursor: pointer;
-    color: var(--orange);
+    color: black;
     background: transparent;
-    border: 2px solid var(--orange);
+    border: 2px solid rgb(199, 4, 4);
 }
 
