--- a/src/Components/PageComponents/TourGuideComponents/AllGuides.module.css
+++ b/src/Components/PageComponents/TourGuideComponents/AllGuides.module.css
@@ -1,5 +1,3 @@
-
-
 .searchItem{
     border: 1px solid lightgray;
     padding: 10px;
@@ -7,15 +5,17 @@
     border-radius: 6px;
     display: flex;
     justify-content: space-between;
-    gap: 20px;
-    margin-bottom: 20px;
+    gap: 30px;
+    margin-bottom: 10px;
     width: 100%;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 14px;
 }
 
 .guideImg{
     flex: 1;
-    width: 200px;
-    height: 220px;
+    width: 250px;
+    height: 250px;
     object-fit: cover;
     margin-right: 1rem;
 }
@@ -23,90 +23,77 @@
 .guideDetails{
     display: flex;
     flex-direction: column;
-    /* text-align: left; */
-    /* gap: 50px; */
     padding-right: 15px;
-    flex: 1.5;
+    flex: 1;
 }
 
-.guideDetails span{
-    margin-bottom: 10px;
+.topDetails{
+    display: flex;
+    flex-direction: column;
+    gap: -5px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1rem;
 }
 
-.guideName{
-    font-size: 25px;
-    color: #16A085;
-}
-
-.guideVehicle{
-    background-color: green;
-    color: white;
-    font-size: 14px;
-    padding: 0 10px;
-    width: max-content;
-}
-
-.subTitle{
-    font-size: 14px;
+.topDetails>span:nth-of-type(1){
     font-weight: bold;
+    color: #f95f35;
+    font-size: 20px;
 }
 
-.guideCancel{
+.topDetails>span:nth-of-type(2){
+    font-weight: 600;
+    color: var(--black);
     font-size: 14px;
-    color: green;
-    font-weight: bold;
 }
 
-.guideCancelText{
-    font-size: 14px;
-    color: #2471A3;    
+.details{
+    display: grid;
+    grid-template-columns: 7rem auto;
+    gap: 10px;
+}
+
+.details>span:nth-of-type(1){
     font-weight: bold;
 }
 
 .otherDetails{
-    flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    font-size: 15px;
-}
+} 
 
 .ratingBar{
+    display: grid;
+    grid-template-columns: 5rem auto;
+    gap: 20px;
+}
+
+.subDetails{
+    display: grid;
+    grid-template-columns: 8rem auto;
+    gap: 10px;
+}
+
+.bookingBtn{
     display: flex;
-    justify-content: space-between;
-}
-
-.ratingBar>span{
-    font-weight: bold;
-}
-
-.ratingNumber{
-    background-color: #0D2F7D;
+    align-items: center;
+    justify-content: center;
     color: white;
-    padding: 3px 5px;
+    border: none;
+    border-radius: 0.5rem;
+    background: var(--buttonBg);
+    transition: all 100ms ease-out;
+    padding: 5px 10px;
+    height: 2.5rem;
 }
 
-.otherText{
-    display: flex;
-    flex-direction: column;
-    text-align: right;
-    gap: 5px;
+.bookingBtn:hover{
+    cursor: pointer;
+    color: var(--orange);
+    background: transparent;
+    border: 2px solid var(--orange);
 }
 
-.district{
-    font-size: 28px;
-}
-
-.rate{
-    font-size: 23px;
-}
-
-.rateText{
-    font-size: 12px;
-    color: gray;
-    margin-bottom: 15px;
-}
-
-.moreBtn{
-    font-weight: bold !important;
-}
