--- a/src/Components/layouts/SubNavigation.module.css
+++ b/src/Components/layouts/SubNavigation.module.css
@@ -8,7 +8,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    font-family: 'Raleway';
+    font-family: segoe ui,Arial,Helvetica,sans-serif;
     font-weight: 600;
     height: 2rem;
     z-index: 1;
