--- a/src/Components/PageComponents/Homepage/TopGuides.css
+++ b/src/Components/PageComponents/Homepage/TopGuides.css
@@ -7,7 +7,7 @@
     top: -3.5rem;
 }
 
-.featured{
+.feature{
     width: 100%;
     max-width: 1024px;
     display: flex;
@@ -23,7 +23,7 @@
     top: -3rem;
 }
 
-.featuredItem{
+.featuredItems{
     position: relative;
     color: white;
     border-radius: 10px;
