--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,10 @@
 body{
   margin: 0;
   padding: 0;
-  font-family: 'Raleway';
+  font-family: 'Source Sans Pro', sans-serif;
   background-color: #f3f3f3;
 }
 
-::-webkit-scrollbar{
+/* ::-webkit-scrollbar{
   display: none;
-}
+} */
